# discordia

./: .gitignore  .tmuxp.yaml  DEV.md  MIGRATION_GUIDE.md  README.md  README_old.md  USER.md  env.example  pyproject.toml
examples/: README.md  advanced_bot.py  basic_bot.py  custom_handler.py  echo_bot.py  llm_bot.py  reply_aware_bot.py  weekday_chatbot.py  weekday_chatbot_advanced.py
examples/llm_handlers/: __init__.py  llm_handler.py  models.py  pygentic_adapter.py  weekday_handler.py
examples/patterns/: __init__.py  daily_log.py  prefixed.py  weekday.py
src/discordia/: __init__.py  bot.py  config.py  context.py  discovery.py  exceptions.py  handlers.py  health.py  plugins.py  registry.py  settings.py  state.py  types.py
src/discordia/engine/: __init__.py  bot.py  context.py  discovery.py  reconciler.py
src/discordia/handlers/: __init__.py  llm.py  logging.py  models.py  protocol.py  pygentic_adapter.py  router.py  weekday_handler.py
src/discordia/llm/: __init__.py  client.py
src/discordia/managers/: __init__.py  category_manager.py  channel_manager.py  message_handler.py
src/discordia/models/: __init__.py  base.py  category.py  channel.py  message.py  user.py
src/discordia/persistence/: __init__.py  database.py  jsonl.py  memory.py  protocol.py
src/discordia/state/: __init__.py  memory.py  models.py  protocol.py  registry.py
src/discordia/templates/: __init__.py  base.py  category.py  channel.py  generated.py  patterns.py  server.py  weekday_pattern.py
tests/: conftest.py  test_bot.py  test_config.py  test_context.py  test_discovery.py  test_error_handling.py  test_exceptions.py  test_handlers.py  test_integration.py  test_jsonl.py  test_llm.py  test_managers.py  test_models.py  test_patterns.py  test_persistence.py  test_plugins.py  test_project_structure.py  test_pygentic_adapter.py  test_registry.py  test_server_template.py  test_settings.py  test_state.py  test_state_memory.py  test_state_models.py  test_state_registry.py  test_templates.py  test_types.py
