[project]
name = "discordia"
version = "0.1.0"
description = "Discordia - Discord bot framework (Steps 1-3)"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "pytest-asyncio>=0.23.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/discordia"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.ruff]
line-length = 120

